Enhance role-based access control and pagination features: - Introduced `Role` enum and integrated role-based authorization in controllers and services. - Updated response types in controllers with HATEOAS support. - Modified `ParcelDTO` and `User` entities to include the `role` field and `trackingId`. - Refined `JwtUtil` and `JwtAuthenticationFilter` to handle roles in JWT. - Adjusted `SecurityConfig` with role-specific access rules and a new `AccessDeniedHandler`. - Added default admin creation in `UserService`.