@@ -1,13 +1,16 @@
 package com.micronauticals.parcel.service;
 
 import com.micronauticals.parcel.entity.User;
+import com.micronauticals.parcel.enums.Role;
 import com.micronauticals.parcel.repo.UserRepo;
+import jakarta.annotation.PostConstruct;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 @Service
@@ -26,10 +29,12 @@ public class UserService implements UserDetailsService {
         User user = userRepo.findByUsername(username)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found"));
 
+        SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + user.getRole().name());
+
         return new org.springframework.security.core.userdetails.User(
                 user.getUsername(),
                 user.getPassword(),
-                Collections.emptyList()
+                List.of(authority)
         );
     }
 
@@ -42,8 +47,21 @@ public class UserService implements UserDetailsService {
         User newUser = new User();
         newUser.setUsername(username);
         newUser.setPassword(passwordEncoder.encode(rawPassword));
+        newUser.setRole(Role.VENDOR);
 
         userRepo.save(newUser);
         return true;
+    }
+
+    @PostConstruct
+    public void createAdminIfNotExist() {
+        if (userRepo.findByUsername("admin").isEmpty()) {
+            User admin = new User();
+            admin.setUsername("admin");
+            admin.setPassword(passwordEncoder.encode("admin123"));
+            admin.setRole(Role.ADMIN);
+            userRepo.save(admin);
+            System.out.println("Admin created");
+        }
     }
 }
